# palautusrepositorio_2025

./: README.md
.github/workflows/: ci.yml
viikko1/nhl-statistics/: .pylintrc  pyproject.toml
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: test_statistics_service.py  test_statistics_service_unittest.py
viikko2/git-branch-harjoitus/: index.py  osamaara.py
viikko2/nhl-reader/: .pre-commit-config.yaml  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/login/src/: app.py
viikko3/webcounter/src/tests/: reset.robot
