[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Karaatsar",email = "kara.atsar@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==1.4.54)",
    "fastapi (>=0.121.0,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

